changed message and implemented suggested change in method